--- a/html/index_inner.html
+++ b/html/index_inner.html
@@ -58,9 +58,9 @@
                 <p class="userName">qaz1211</p>
             </div>
             <div class="btnBox">
-                <button>入金</button>
-                <button>振替</button>
-                <button>出金</button>
+                <button onclick="window.location.href='./deposit.html'">入金</button>
+                <button onclick="window.location.href='./transfer.html'">振替</button>
+                <button onclick="window.location.href='./withdrawal.html'">出金</button>
             </div>
             <div class="walletBox">
                 <div>
@@ -98,27 +98,63 @@
                 </li>
             </ul>
             <ul class="downBox hot">
-                <li class="openSlot">
-                    <img src="../images/partner/slot/gameImg_1.png" alt="">
-                </li>
-                <li class="openSlot">
-                    <img src="../images/partner/slot/gameImg_2.png" alt="">
-                </li>
-                <li class="openSlot">
-                    <img src="../images/partner/slot/gameImg_3.png" alt="">
-                </li>
-                <li class="openSlot">
-                    <img src="../images/partner/slot/gameImg_4.png" alt="">
-                </li>
-                <li class="openFish">
-                    <img src="../images/partner/fish/gameImg_1.png" alt="">
-                </li>
-                <li class="openFish">
-                    <img src="../images/partner/fish/gameImg_2.png" alt="">
-                </li>
-                <li class="openFish">
-                    <img src="../images/partner/fish/gameImg_3.png" alt="">
-                </li>
+                <div class="gameBox">
+                    <div class="title">
+                        <p>
+                            <span>Wizards Want War!</span>
+                        </p>
+                        <div class="loveBox">
+                            <i class="smallLove_ic"></i>
+                        </div>
+                    </div>
+                    <img src="../images/partner/slot/gameImg_1.png">
+                    <div class="btnBox">
+                        <button class="try">
+                            <span>体験プレイ</span>
+                        </button>
+                        <button class="openSlot">
+                            <span>やってみて</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="gameBox">
+                    <div class="title">
+                        <p>
+                            <span>Wizards Want War!</span>
+                        </p>
+                        <div class="loveBox">
+                            <i class="smallLove_ic"></i>
+                        </div>
+                    </div>
+                    <img src="../images/partner/slot/gameImg_2.png">
+                    <div class="btnBox">
+                        <button class="try">
+                            <span>体験プレイ</span>
+                        </button>
+                        <button class="openSlot">
+                            <span>やってみて</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="gameBox">
+                    <div class="title">
+                        <p>
+                            <span>Wizards Want War!</span>
+                        </p>
+                        <div class="loveBox">
+                            <i class="smallLove_ic"></i>
+                        </div>
+                    </div>
+                    <img src="../images/partner/fish/gameImg_1.png">
+                    <div class="btnBox">
+                        <button class="try">
+                            <span>体験プレイ</span>
+                        </button>
+                        <button class="openFish">
+                            <span>やってみて</span>
+                        </button>
+                    </div>
+                </div>
             </ul>
             <ul class="downBox sport">
                 <li class="openSport">
