--- a/index.html
+++ b/index.html
@@ -91,27 +91,63 @@
                 </li>
             </ul>
             <ul class="downBox hot">
-                <li class="unLogin">
-                    <img src="./images/partner/slot/gameImg_1.png" alt="">
-                </li>
-                <li class="unLogin">
-                    <img src="./images/partner/slot/gameImg_2.png" alt="">
-                </li>
-                <li class="unLogin">
-                    <img src="./images/partner/slot/gameImg_3.png" alt="">
-                </li>
-                <li class="unLogin">
-                    <img src="./images/partner/slot/gameImg_4.png" alt="">
-                </li>
-                <li class="unLogin">
-                    <img src="./images/partner/fish/gameImg_1.png" alt="">
-                </li>
-                <li class="unLogin">
-                    <img src="./images/partner/fish/gameImg_2.png" alt="">
-                </li>
-                <li class="unLogin">
-                    <img src="./images/partner/fish/gameImg_3.png" alt="">
-                </li>
+                <div class="gameBox">
+                    <div class="title">
+                        <p>
+                            <span>Wizards Want War!</span>
+                        </p>
+                        <div class="loveBox">
+                            <i class="smallLove_ic"></i>
+                        </div>
+                    </div>
+                    <img src="../images/partner/slot/gameImg_1.png">
+                    <div class="btnBox">
+                        <button class="try">
+                            <span>体験プレイ</span>
+                        </button>
+                        <button class="unLogin">
+                            <span>やってみて</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="gameBox">
+                    <div class="title">
+                        <p>
+                            <span>Wizards Want War!</span>
+                        </p>
+                        <div class="loveBox">
+                            <i class="smallLove_ic"></i>
+                        </div>
+                    </div>
+                    <img src="../images/partner/slot/gameImg_2.png">
+                    <div class="btnBox">
+                        <button class="try">
+                            <span>体験プレイ</span>
+                        </button>
+                        <button class="unLogin">
+                            <span>やってみて</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="gameBox">
+                    <div class="title">
+                        <p>
+                            <span>Wizards Want War!</span>
+                        </p>
+                        <div class="loveBox">
+                            <i class="smallLove_ic"></i>
+                        </div>
+                    </div>
+                    <img src="../images/partner/fish/gameImg_1.png">
+                    <div class="btnBox">
+                        <button class="try">
+                            <span>体験プレイ</span>
+                        </button>
+                        <button class="unLogin">
+                            <span>やってみて</span>
+                        </button>
+                    </div>
+                </div>
             </ul>
             <ul class="downBox sport">
                 <li class="unLogin">
