--- a/html/searchPoint.html
+++ b/html/searchPoint.html
@@ -18,7 +18,7 @@
                 <i class="arrow_ic"></i>
                 戻る
             </button>
-            <div class="title">∞4世代ボーナス報酬</div>
+            <div class="title small">∞4世代ボーナス報酬</div>
         </div>
     </header>
     <!--main-->
@@ -56,7 +56,7 @@
                 </p>
                 <div class="partnerBox display">
                     <div class="title">
-                        <button>
+                        <button class="partnerBtn">
                             2世代目
                             <i class="search_ic"></i>
                         </button>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="partnerBox display">
                     <div class="title">
-                        <button>
+                        <button class="partnerBtn">
                             3世代目
                             <i class="search_ic"></i>
                         </button>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="partnerBox display">
                     <div class="title">
-                        <button>
+                        <button class="partnerBtn">
                             4世代目
                             <i class="search_ic"></i>
                         </button>
@@ -225,6 +225,69 @@
                         </td>
                     </tr>
                 </table>
+                <div class="pageBox">
+                    <div class="line"></div>
+                    <i class="arrow_ic disable"></i>
+                    <p>
+                        <span>1</span>
+                    </p>
+                    <i class="arrow_ic"></i>
+                    <div class="line"></div>
+                </div>
+                <div class="pageText">総計 4 件</div>
+            </div>
+        </div>
+        <!--會員詳情-->
+        <div class="jumpWindow partnerBox">
+            <div class="title">
+                <p>2世代目</p>
+                <i class="close"></i>
+            </div>
+            <div class="content">
+                <div class="box">
+                    <table>
+                        <tr>
+                            <th>
+                                <p>メンバーアカウント</p>
+                            </th>
+                            <th>
+                                <p>メンバー名</p>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>XX00o8</p>
+                            </td>
+                            <td>
+                                <p>よやすひろのぶ</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>10058tt</p>
+                            </td>
+                            <td>
+                                <p>Shado</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>tete17</p>
+                            </td>
+                            <td>
+                                <p>自分の名前</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>ssaaDD250</p>
+                            </td>
+                            <td>
+                                <p>-</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
                 <div class="pageBox">
                     <div class="line"></div>
                     <i class="arrow_ic disable"></i>
