--- a/index.html
+++ b/index.html
@@ -160,17 +160,66 @@
             </ul>
             <ul class="downBox live display">
                 <li class="unLogin">
-                    <img src="./images/partner/live/liveImg_1.png" alt="">
+                    <img src="./images/partner/live/live_ag.png" alt="">
                     <div class="textBox">
-                        <p class="title">SA 真人</p>
+                        <p class="title">AG</p>
+                        <p class="sub">AG ライブ</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/live/live_ab.png" alt="">
+                    <div class="textBox">
+                        <p class="title">AB</p>
+                        <p class="sub">AB ライブ</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/live/live_dg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">DG</p>
+                        <p class="sub">DG ライブ</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/live/live_evo.png" alt="">
+                    <div class="textBox">
+                        <p class="title">EVO</p>
+                        <p class="sub">EVO ライブ</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/live/live_mg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">MG</p>
+                        <p class="sub">MG ライブ</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/live/live_og.png" alt="">
+                    <div class="textBox">
+                        <p class="title">OG</p>
+                        <p class="sub">OG ライブ</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/live/live_pp.png" alt="">
+                    <div class="textBox">
+                        <p class="title">PP</p>
+                        <p class="sub">PP ライブ</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/live/live_sa.png" alt="">
+                    <div class="textBox">
+                        <p class="title">SA</p>
                         <p class="sub">SA ライブ</p>
                     </div>
                 </li>
                 <li class="unLogin">
-                    <img src="./images/partner/live/liveImg_2.png" alt="">
+                    <img src="./images/partner/live/live_wm.png" alt="">
                     <div class="textBox">
-                        <p class="title">AG 真人</p>
-                        <p class="sub">AG ライブ</p>
+                        <p class="title">WM</p>
+                        <p class="sub">WM ライブ</p>
                     </div>
                 </li>
             </ul>
@@ -178,24 +227,220 @@
                 <li class="unLogin">
                     <img src="./images/partner/slot/slot_ag.png" alt="">
                     <div class="textBox">
-                        <p class="title">AG SLOT</p>
+                        <p class="title">AG</p>
                         <p class="sub">AG スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_atux.png" alt="">
+                    <div class="textBox">
+                        <p class="title">ATUX</p>
+                        <p class="sub">ATUX スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_blueprint.png" alt="">
+                    <div class="textBox">
+                        <p class="title">BLUE PRINT</p>
+                        <p class="sub">BLUE PRINT スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_bng.png" alt="">
+                    <div class="textBox">
+                        <p class="title">BNG</p>
+                        <p class="sub">BNG スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_elk.png" alt="">
+                    <div class="textBox">
+                        <p class="title">ELK</p>
+                        <p class="sub">ELK スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_ely.png" alt="">
+                    <div class="textBox">
+                        <p class="title">ELY</p>
+                        <p class="sub">ELY スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_evo.png" alt="">
+                    <div class="textBox">
+                        <p class="title">EVO</p>
+                        <p class="sub">EVO スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_ftp.png" alt="">
+                    <div class="textBox">
+                        <p class="title">4thePlayer</p>
+                        <p class="sub">4thePlayer スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_goldenhero.png" alt="">
+                    <div class="textBox">
+                        <p class="title">GOLDENHERO</p>
+                        <p class="sub">GOLDENHERO スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_hn.png" alt="">
+                    <div class="textBox">
+                        <p class="title">HABANERO</p>
+                        <p class="sub">HABANERO スロット</p>
                     </div>
                 </li>
                 <li class="unLogin">
                     <img src="./images/partner/slot/slot_ifun.png" alt="">
                     <div class="textBox">
-                        <p class="title">iFUN SLOT</p>
+                        <p class="title">iFUN</p>
                         <p class="sub">iFUN スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_jili.png" alt="">
+                    <div class="textBox">
+                        <p class="title">JILI</p>
+                        <p class="sub">JILI スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_MG.png" alt="">
+                    <div class="textBox">
+                        <p class="title">MG</p>
+                        <p class="sub">MG スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_net.png" alt="">
+                    <div class="textBox">
+                        <p class="title">NET</p>
+                        <p class="sub">NET スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_nolimit.png" alt="">
+                    <div class="textBox">
+                        <p class="title">noLimit</p>
+                        <p class="sub">noLimit スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_pg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">PG</p>
+                        <p class="sub">PG スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_pls.png" alt="">
+                    <div class="textBox">
+                        <p class="title">PLS</p>
+                        <p class="sub">PLS スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_png.png" alt="">
+                    <div class="textBox">
+                        <p class="title">PNG</p>
+                        <p class="sub">PNG スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_pg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">PRAGMATICPLAY</p>
+                        <p class="sub">PRAGMATICPLAY スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_qp.png" alt="">
+                    <div class="textBox">
+                        <p class="title">QUICKSPIN</p>
+                        <p class="sub">QUICKSPIN スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_relax.png" alt="">
+                    <div class="textBox">
+                        <p class="title">RELAX</p>
+                        <p class="sub">RELAX スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_rr.png" alt="">
+                    <div class="textBox">
+                        <p class="title">REDRAKE</p>
+                        <p class="sub">REDRAKE スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_rsg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">RSG</p>
+                        <p class="sub">RSG スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_rt.png" alt="">
+                    <div class="textBox">
+                        <p class="title">RED TIGER</p>
+                        <p class="sub">RED TIGER スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_sp.png" alt="">
+                    <div class="textBox">
+                        <p class="title">SP</p>
+                        <p class="sub">SP スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_tpg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">TPG</p>
+                        <p class="sub">TPG スロット</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/slot/slot_ygg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">YGGDRASIL</p>
+                        <p class="sub">YGGDRASIL スロット</p>
                     </div>
                 </li>
             </ul>
             <ul class="downBox fish">
                 <li class="unLogin">
+                    <img src="./images/partner/fish/fish_jili.png" alt="">
+                    <div class="textBox">
+                        <p class="title">JILI</p>
+                        <p class="sub">JILI 釣りゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
                     <img src="./images/partner/fish/fish_rsg.png" alt="">
                     <div class="textBox">
                         <p class="title">RSG</p>
-                        <p class="sub">AG 釣りゲーム</p>
+                        <p class="sub">RSG 釣りゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/fish/fish_sp.png" alt="">
+                    <div class="textBox">
+                        <p class="title">SP</p>
+                        <p class="sub">SP 釣りゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/fish/fish_tpg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">TPG</p>
+                        <p class="sub">TPG 釣りゲーム</p>
                     </div>
                 </li>
             </ul>
@@ -208,10 +453,59 @@
                     </div>
                 </li>
                 <li class="unLogin">
+                    <img src="./images/partner/board/board_ely.png" alt="">
+                    <div class="textBox">
+                        <p class="title">ELY</p>
+                        <p class="sub">ELY カードゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/board/board_ftp.png" alt="">
+                    <div class="textBox">
+                        <p class="title">4thePlayer</p>
+                        <p class="sub">4thePlayer カードゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/board/board_hn.png" alt="">
+                    <div class="textBox">
+                        <p class="title">HABANERO</p>
+                        <p class="sub">HABANERO カードゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
                     <img src="./images/partner/board/board_ifun.png" alt="">
                     <div class="textBox">
                         <p class="title">iFUN</p>
                         <p class="sub">iFUN カードゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/board/board_jili.png" alt="">
+                    <div class="textBox">
+                        <p class="title">JILI</p>
+                        <p class="sub">JILI カードゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/board/board_mg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">MG</p>
+                        <p class="sub">MG カードゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/board/board_pg.png" alt="">
+                    <div class="textBox">
+                        <p class="title">PG</p>
+                        <p class="sub">PG カードゲーム</p>
+                    </div>
+                </li>
+                <li class="unLogin">
+                    <img src="./images/partner/board/board_rr.png" alt="">
+                    <div class="textBox">
+                        <p class="title">RED RAKE</p>
+                        <p class="sub">RED RAKE カードゲーム</p>
                     </div>
                 </li>
             </ul>
