--- a/html/searchPoint_record.html
+++ b/html/searchPoint_record.html
@@ -18,7 +18,7 @@
                 <i class="arrow_ic"></i>
                 戻る
             </button>
-            <div class="title">∞4世代ボーナス報酬</div>
+            <div class="title small">∞4世代ボーナス報酬</div>
         </div>
     </header>
     <!--main-->
