--- a/html/help_often.html
+++ b/html/help_often.html
@@ -90,13 +90,34 @@
             <!--內容-->
             <div class="helpBody">
                 <ul>
-                    <li>プロモーション</li>
-                    <li>入出金と振替</li>
-                    <li>入出金方法</li>
-                    <li>登録とアカウント</li>
-                    <li>アフィリエイト</li>
-                    <li>∞4世代ポーナス</li>
-                    <li>お問い合わせ</li>
+                    <li>
+                        プロモーション
+                        <i class="arrow_ic"></i>
+                    </li>
+                    <li>
+                        入出金と振替
+                        <i class="arrow_ic"></i>
+                    </li>
+                    <li>
+                        入出金方法
+                        <i class="arrow_ic"></i>
+                    </li>
+                    <li>
+                        登録とアカウント
+                        <i class="arrow_ic"></i>
+                    </li>
+                    <li>
+                        アフィリエイト
+                        <i class="arrow_ic"></i>
+                    </li>
+                    <li>
+                        ∞4世代ポーナス
+                        <i class="arrow_ic"></i>
+                    </li>
+                    <li>
+                        お問い合わせ
+                        <i class="arrow_ic"></i>
+                    </li>
                 </ul>
             </div>
         </div>
