--- a/html/dealRecord.html
+++ b/html/dealRecord.html
@@ -147,19 +147,19 @@
     <footer class="user">
         <ul>
             <li>
-                <a href="./index_inner.html"></a>
+                <a class="home" href="./index_inner.html"></a>
             </li>
             <li>
-                <a href="./event.html"></a>
+                <a class="promotion" href="./event.html"></a>
+            </li>
+            <li class="active">
+                <a class="wallet" href="./wallet.html"></a>
             </li>
             <li>
-                <a href="./wallet.html"></a>
+                <a class="cs" href="./help_often_contact.html"></a>
             </li>
             <li>
-                <a href="./help_often_contact.html"></a>
-            </li>
-            <li>
-                <a href="./member.html"></a>
+                <a class="member" href="./member.html"></a>
             </li>
         </ul>
     </footer>
