--- a/html/help_often.html
+++ b/html/help_often.html
@@ -182,6 +182,7 @@
             </ul>
             <ul class="q3">
                 <li>
+                    <div class="img depositWay"></div>
                     <p class="text smallTitle">決済方法詳しくはこちら:</p>
                     <p class="text">
                         1. <a href="#">TIGER PAY</a>
