--- a/html/help_about.html
+++ b/html/help_about.html
@@ -113,14 +113,14 @@
         <!--幫助中心內層-->
         <ul class="helpInner">
             <li class="q1">
-                <p class="text">ようこそAU8へ！</p>
+                <p class="text">ようこそmanekiへ！</p>
                 <p class="text mar">当サイトは安心かつ安全な一流カジノゲームです。また、アジア地域にて非常に公平性があるゲーミングプロバイダーと提携をし、ユーザー満足の向上や信頼できる環境を築くように力を尽くしておりますので、最高のオンラインカジノゲームをお楽しみ頂けます。 当サイトには専属の日本語カスタマースタッフが在籍しております。問題がございました場合は、解決に向けて全力で対応いたします。ご意見、ご感想、問題、ご質問等がございましたら、ライブチャットまたはメールにてご連絡をお願い申し上げます。ユーザー様からのご連絡をいつでもお待ちしております。</p>
                 <p class="text mar">また、当サイトのカスタマーサービスは365日対応しております！</p>
                 <p class="text mar">当サイトでは、ユーザー様に安心して楽しくお楽しみいただけるように、ライブカジノ、スロット、スポーツベット、ジャックポット、ルーレット、ブラックジャック、魚釣りゲームなど、多種多様なゲームをご用意しております。</p>
                 <p class="text mar">お客様からのご意見、ご感想を参考にさせて頂き今後も多くのカジノゲームをご提供させていただきますので、ご愛顧のほどよろしくお願い申し上げます。</p>
             </li>
             <li class="q2">
-                <p class="text">AU8（以下「当サイト」）は、当サイトを運営する国のデータ保護法、および規制に準拠して、当サイトを利用またはアカウントを開設されるお客様(以下、「お客様」)の個人情報を処理することを保証します。当社にて管理・保護致しますので、ご安心ください。</p>
+                <p class="text">maneki（以下「当サイト」）は、当サイトを運営する国のデータ保護法、および規制に準拠して、当サイトを利用またはアカウントを開設されるお客様(以下、「お客様」)の個人情報を処理することを保証します。当社にて管理・保護致しますので、ご安心ください。</p>
                 <p class="text">当社はお客様の個人情報を最重要視しておりますので、以下の方針に沿った事業運営に取組み、社会的責任を果たして参ります</p>
                 <p class="text smallTitle">1. 顧客情報保護方針</p>
                 <p class="text">お客様が当サイトアカウント登録の際にご入力いただいた個人情報（氏名、電話、メールアドレス、住所、生年月日等）を第三者に開示・提供することは致しません。</p>
@@ -254,7 +254,7 @@
                         <p>8.12. 1 日の出金回数や 1 日に獲得いただける勝利金の上限はございません。しかしながら、ご出金の際は手数料を頂戴しており、手数料を差し引いた金額をお振り込みいたします。詳細は出金ページの下にあります【ご注意】を必ずご確認ください。</p>
                         <p>8.13. 出金を申請する際に当社は 48 時間以内にゲーム履歴の審査を行う権利を有します。</p>
                         <p>8.14. 現在当サイトで利用可能の入出金方法は【ファイナンスサービス】に記載されています。ご入金実績の無い口座へのお引き出しは、対応出来かねます。なお、入出金の方法は同じ方法である必要がございますが、プレイヤー様が選択された入金方法以外で出金したい場合、当社はお客様の出金方法を変更する権利を持っています。</p>
-                        <p>8.15. クレジットカードでご入金される場合は、先に下記の詳細（画像）を手書きで「AU8 認証用」と書いた紙と一緒にご提出ください。審査完了後、クレジットカード決済機能を開放いたします。</p>
+                        <p>8.15. クレジットカードでご入金される場合は、先に下記の詳細（画像）を手書きで「maneki 認証用」と書いた紙と一緒にご提出ください。審査完了後、クレジットカード決済機能を開放いたします。</p>
                         <p>*本人確認書類</p>
                         <p>*住所確認書類</p>
                         <p>*クレジットカード</p>
