--- a/html/member.html
+++ b/html/member.html
@@ -96,6 +96,10 @@
                         <i class="lang_ic"></i>
                         日本語
                     </li>
+                    <li onclick="window.location.href='./agent.html'">
+                        <i class="agent_ic"></i>
+                        アフィリエイト
+                    </li>
                     <li onclick="window.location.href='../index.html'">
                         <i class="logout_ic"></i>
                         ログアウト
