--- a/html/agentHelp_normal.html
+++ b/html/agentHelp_normal.html
@@ -31,15 +31,15 @@
     <main>
         <div class="agentHelpWrap">
             <!--開頭選單-->
-            <div class="helpHeader">
+            <div class="helpHeader normal">
                 <div class="selectBox">
                     <p>1· 登録</p>
                     <i class="arrow_ic"></i>
                     <select>
-                        <option value="" disabled>選んでください</option>
-                        <option value="">1· 登録</option>
-                        <option value="">2· コミッション</option>
-                        <option value="">3· 出金</option>
+                        <option value="" disabled selected>選んでください</option>
+                        <option value="1">1· 登録</option>
+                        <option value="2">2· コミッション</option>
+                        <option value="3">3· 出金</option>
                     </select>
                 </div>
             </div>
