--- a/html/agentHelp_privacy.html
+++ b/html/agentHelp_privacy.html
@@ -31,15 +31,15 @@
     <main>
         <div class="agentHelpWrap">
             <!--開頭選單-->
-            <div class="helpHeader">
+            <div class="helpHeader privacy">
                 <div class="selectBox">
                     <p>1· 個人情報保護方針</p>
                     <i class="arrow_ic"></i>
                     <select>
-                        <option value="" disabled>選んでください</option>
-                        <option value="">1· 個人情報保護方針</option>
-                        <option value="">2· 顧客情報保護方針</option>
-                        <option value="">3· ドメイン認証SSL</option>
+                        <option value="" disabled selected>選んでください</option>
+                        <option value="1">1· 個人情報保護方針</option>
+                        <option value="2">2· 顧客情報保護方針</option>
+                        <option value="3">3· ドメイン認証SSL</option>
                     </select>
                 </div>
             </div>
