--- a/html/agentHelp_rule.html
+++ b/html/agentHelp_rule.html
@@ -31,23 +31,23 @@
     <main>
         <div class="agentHelpWrap">
             <!--開頭選單-->
-            <div class="helpHeader">
+            <div class="helpHeader rule">
                 <div class="selectBox">
                     <p>1· はじめに</p>
                     <i class="arrow_ic"></i>
                     <select>
-                        <option value="" disabled>選んでください</option>
-                        <option value="">1· はじめに</option>
-                        <option value="">2· 定義と解釈</option>
-                        <option value="">3· パートナー適用条件</option>
-                        <option value="">4· 当社の権利と義務</option>
-                        <option value="">5· パートナーの権利と義務</option>
-                        <option value="">6· コミッション</option>
-                        <option value="">7· 禁止事項</option>
-                        <option value="">8· 負債および責任制限</option>
-                        <option value="">9· 機密情報</option>
-                        <option value="">10· 解約または契約の終了</option>
-                        <option value="">11· 本規約および本契約の改正</option>
+                        <option value="" disabled selected>選んでください</option>
+                        <option value="1">1· はじめに</option>
+                        <option value="2">2· 定義と解釈</option>
+                        <option value="3">3· パートナー適用条件</option>
+                        <option value="4">4· 当社の権利と義務</option>
+                        <option value="5">5· パートナーの権利と義務</option>
+                        <option value="6">6· コミッション</option>
+                        <option value="7">7· 禁止事項</option>
+                        <option value="8">8· 負債および責任制限</option>
+                        <option value="9">9· 機密情報</option>
+                        <option value="10">10· 解約または契約の終了</option>
+                        <option value="11">11· 本規約および本契約の改正</option>
                     </select>
                 </div>
             </div>
