--- a/html/agentHelp_rule.html
+++ b/html/agentHelp_rule.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <!--內容-->
-            <div class="helpBody">
+            <div class="helpBody rule">
                 <div class="bigTitle">
                     <p>利用規約</p>
                 </div>
