--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         <!--請先登入-->
         <div class="jumpWindow plsGo">
             <div class="title">
-                ヒント
+                <p>ヒント</p>
                 <i class="close"></i>
             </div>
             <div class="content">
@@ -1147,8 +1147,26 @@
                         <p class="ruleBtn">利用規約とプライバシーポリシー</p>
                     </div>
                 </label>
-                <button class="checkBtn close" type="button">確認</button>
+                <button class="checkBtn" type="button">確認</button>
             </form>
+        </div>
+        <div class="jumpWindow plsGo2">
+            <div class="title">
+                <p>登録完了</p>
+                <i class="close"></i>
+            </div>
+            <div class="content">
+                <div class="img"></div>
+                <p>
+                    おめでとうございます、
+                    <br>
+                    メンバーになりました
+                </p>
+                <div class="btnBox">
+                    <button class="close">戻る</button>
+                    <button onclick="window.location.href='./html/deposit.html'">入金する</button>
+                </div>
+            </div>
         </div>
     </div>
     <!--背景-->
