--- a/html/index_inner.html
+++ b/html/index_inner.html
@@ -517,6 +517,11 @@
                 </li>
             </ul>
         </div>
+        <aside>
+            <div class="sideBtn">
+                <button class="inviteFriend" type="button"></button>
+            </div>
+        </aside>
     </main>
     <!--footer-->
     <footer class="index">
