--- a/index.html
+++ b/index.html
@@ -510,6 +510,11 @@
                 </li>
             </ul>
         </div>
+        <aside>
+            <div class="sideBtn">
+                <button class="inviteFriend" type="button"></button>
+            </div>
+        </aside>
     </main>
     <!--footer-->
     <footer class="index">
