--- a/html/index_inner.html
+++ b/html/index_inner.html
@@ -640,6 +640,12 @@
                 </label>
                 <label class="inputBox">
                     <input type="text" placeholder="振替金額をご入力ください">
+                    <div class="BtnArea">
+                        <button type="button" class="fifty">$50</button>
+                        <button type="button" class="oneHundred">$100</button>
+                        <button type="button" class="fiveHundred">$500</button>
+                        <button type="button" class="all">全て</button>
+                    </div>
                 </label>
                 <button>振替します</button>
             </div>
@@ -682,6 +688,12 @@
                 </label>
                 <label class="inputBox">
                     <input type="text" placeholder="振替金額をご入力ください">
+                    <div class="BtnArea">
+                        <button type="button" class="fifty">$50</button>
+                        <button type="button" class="oneHundred">$100</button>
+                        <button type="button" class="fiveHundred">$500</button>
+                        <button type="button" class="all">全て</button>
+                    </div>
                 </label>
                 <button>振替します</button>
             </div>
@@ -724,6 +736,12 @@
                 </label>
                 <label class="inputBox">
                     <input type="text" placeholder="振替金額をご入力ください">
+                    <div class="BtnArea">
+                        <button type="button" class="fifty">$50</button>
+                        <button type="button" class="oneHundred">$100</button>
+                        <button type="button" class="fiveHundred">$500</button>
+                        <button type="button" class="all">全て</button>
+                    </div>
                 </label>
                 <button>振替します</button>
             </div>
@@ -766,6 +784,12 @@
                 </label>
                 <label class="inputBox">
                     <input type="text" placeholder="振替金額をご入力ください">
+                    <div class="BtnArea">
+                        <button type="button" class="fifty">$50</button>
+                        <button type="button" class="oneHundred">$100</button>
+                        <button type="button" class="fiveHundred">$500</button>
+                        <button type="button" class="all">全て</button>
+                    </div>
                 </label>
                 <button>振替します</button>
             </div>
