--- a/html/vip.html
+++ b/html/vip.html
@@ -28,9 +28,9 @@
             <!--上部-->
             <div class="topBox">
                 <div class="cardBG">
-                    <div class="medal"></div>
+                    <div class="medal vip0"></div>
                     <div class="textBox">
-                        <p class="title">レギュラー会員</p>
+                        <p class="title">ルーキー会員</p>
                         <div class="row">
                             <p class="smallTitle">現在の入金</p>
                             <p class="text">
@@ -50,7 +50,7 @@
             </div>
             <div class="lineTitle">
                 <i class="star_ic"></i>
-                <p>レギュラー会員</p>
+                <p>ルーキー会員</p>
                 <div class="line"></div>
             </div>
             <!--會員權利-->
